deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: basic-flask-app
  labels:
    app: flask-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: flask-app

  template:
    metadata:
      labels:
        app: flask-app

    spec:
      containers:
      - name: practice-k8
        image: shreyayys/flask-app:latest
        imagePullPolicy: IfNotPresent

        volumeMounts:
        - name: db-connection
          mountPath: /opt

        ports:
        - containerPort: 5001

      volumes:
      - name: db-connection
        configMap:
          name: test-configmap
